samples/_failures_safe/1761399299_7ff51c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4fd79eb.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f4fd79eb.c:151:13: error: expected declaration or statement at end of input
  151 |             advance = 1;
      |             ^~~~~~~
./samples/SAFE/__tmp_f4fd79eb.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f4fd79eb.c:151:13: error: expected declaration or statement at end of input
